<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="alex.pakshin.ru.netology.nerecipe.ui.main.FeedFragment"
        android:label="@string/main_fragment"
        tools:layout="@layout/feed_fragment" >
        <action
            android:id="@+id/to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment" />
        <action
            android:id="@+id/to_recipeContentFragment"
            app:destination="@id/recipeContentFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeDetailsFragment"
        android:name="alex.pakshin.ru.netology.nerecipe.ui.main.RecipeDetailsFragment"
        android:label="@string/details_fragment" >
        <argument
            android:name="recipeId"
            app:argType="long" />
        <action
            android:id="@+id/recipeDetailsFragment_to_recipeContentFragment"
            app:destination="@id/recipeContentFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeContentFragment"
        android:name="alex.pakshin.ru.netology.nerecipe.ui.main.RecipeContentFragment"
        android:label="@string/content_fragment" >
        <argument
            android:name="recipeId"
            app:argType="long"             />
    </fragment>
</navigation>